# X-UI

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/lv_examples/: CMakeLists.txt  lv_demo_conf.h
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
lv_sim_visual_studio/LVGL.Simulator/: LVGL.Core.vcxitems  LVGL.Simulator.cpp  LVGL.Simulator.vcxproj  LVGL.Simulator.vcxproj.filters
lv_sim_visual_studio/LVGL.Simulator/freetype/builds/windows/vc2010/: freetype.sln  freetype.vcxproj
main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c
main/controller/: dialplate_controller.c  dialplate_controller.h
main/ui/: app_entity_def.h  app_page_factory.c  ui_page_manager.c  ui_page_manager.h
main/ui/page/dialplate/: dialplate.c  dialplate.h  dialplate_view.c  dialplate_view.h
main/ui/page/start_up/: start_up.c  start_up.h  start_up_view.c  start_up_view.h
main/ui/page/status_bar/: status_bar.c  status_bar.h
main/ui/resource/: resource_pool.c  resource_pool.h
