idf_component_register(SRCS
        "hello_world_main.c"
        "controller/dialplate_controller.c"
        "ui/ui_page_manager.c"
        "ui/resource/resource_pool.c"
        "ui/page/dialplate/dialplate.c"
        "ui/page/dialplate/dialplate_view.c"
        "ui/page/start_up/start_up.c"
        "ui/page/start_up/start_up_view.c"
        "ui/page/status_bar/status_bar.c"
        "ui/app_page_factory.c"

        "ui/resource/font/font_agencyb_36.c"
        "ui/resource/font/font_bahnschrift_13.c"
        "ui/resource/font/font_bahnschrift_17.c"
        "ui/resource/font/font_bahnschrift_32.c"
        "ui/resource/font/font_bahnschrift_65.c"

        "ui/resource/img/img_src_alarm.c"
        "ui/resource/img/img_src_battery.c"
        "ui/resource/img/img_src_battery_info.c"
        "ui/resource/img/img_src_bicycle.c"
        "ui/resource/img/img_src_compass.c"
        "ui/resource/img/img_src_gps_arrow_dark.c"
        "ui/resource/img/img_src_gps_arrow_default.c"
        "ui/resource/img/img_src_gps_arrow_light.c"
        "ui/resource/img/img_src_gps_pin.c"
        "ui/resource/img/img_src_gyroscope.c"
        "ui/resource/img/img_src_locate.c"
        "ui/resource/img/img_src_map_location.c"
        "ui/resource/img/img_src_menu.c"
        "ui/resource/img/img_src_origin_point.c"
        "ui/resource/img/img_src_pause.c"
        "ui/resource/img/img_src_satellite.c"
        "ui/resource/img/img_src_sd_card.c"
        "ui/resource/img/img_src_start.c"
        "ui/resource/img/img_src_stop.c"
        "ui/resource/img/img_src_storage.c"
        "ui/resource/img/img_src_system_info.c"
        "ui/resource/img/img_src_time_info.c"
        "ui/resource/img/img_src_trip.c"

        INCLUDE_DIRS "")
